align issue solved

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ section{
 .width-hilf{
     width: 50%;
     padding-left: 5%;
+    vertical-align: middle;
 }
 .width-hilf img{
     width: 100%;
